# python_package_starter

./: CMakeLists.txt  README.md  package.xml  setup.py
.vs_code/: settings.json
launch/: launch_example.launch
nodes/: example_node.py
scripts/: example_script.py
src/python_package_starter/: __init__.py  package_code.py
src/python_package_starter/sub_package/: __init__.py  sub_package_code.py
