<?xml version="1.0"?>
<package format="2">
    <name>python_package_starter</name>
    <version>0.0.0</version>
    <description>ros python starter package</description>
    <maintainer email="angus@swarmfarm.com">Angus Ross</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <export>
    </export>
</package>